<resources>

    <!-- 发红包 -->
    <string name="jrmf_rp_bribery_message">恭喜发财，大吉大利！</string>
    <string name="jrmf_rp_btn_pay">立即支付</string>
    <string name="jrmf_rp_btn_put">塞钱进红包</string>
    <string name="jrmf_rp_send_rp">发红包</string>
    <string name="jrmf_rp_ge">个</string>
    <string name="jrmf_rp_yuan">元</string>
    <string name="jrmf_rp_num">红包个数</string>
    <string name="jrmf_rp_fail_send">发送</string>
    <string name="jrmf_rp_fail_not_send">不发送</string>
    <string name="jrmf_rp_send_exception">红包发送异常，请您重新尝试发送红包，若您不尝试则金额将在2小时内返还到您的钱包余额账户中</string>
    <string name="jrmf_rp_go_bind_card">去绑卡</string>
    <string name="jrmf_rp_bind_card_tip">按照国家最新政策需要对您的账户进行实名认证，并进行手机号校验。</string>
    <string name="jrmf_rp_network_error">当前网络不佳，请稍后再试</string>
    <string name="jrmf_rp_send_rp_count">发出红包%1$d个</string>
    <string name="jrmf_rp_auth_title">实名认证</string>
    <string name="jrmf_rp_auth_tip">按照国家最新政策需要对您的账户进行实名认证，并进行手机号校验</string>
    <string name="jrmf_rp_set_pwd_tip">您的账户还未设置支付密码，请先进行设置支付密码</string>
    <string name="jrmf_rp_auth_success">实名认证成功</string>


    <!-- 绑定银行卡 -->
    <string name="jrmf_rp_phone_tip">手机号格式不正确</string>
    <string name="jrmf_rp_card_num_error">卡号格式不正确</string>
    <string name="jrmf_rp_pay_protocol"> 钱包快捷支付协议</string>
    <string name="jrmf_rp_req_code">请先获得验证码</string>
    <string name="jrmf_rp_input_code">请输入短信验证码</string>
    <string name="jrmf_rp_add_card_suc">绑定银行卡成功</string>
    <string name="jrmf_rp_username">姓名</string>
    <string name="jrmf_rp_user_idcard_num">身份证号</string>
    <string name="jrmf_rp_input_id_card_num">请输入身份证号</string>
    <string name="jrmf_rp_user_phone_num">手机号</string>
    <string name="jrmf_rp_user_bank_phone_num">银行预留手机号</string>
    <string name="jrmf_rp_user_phone_num_hint">请输入手机号</string>
    <string name="jrmf_rp_verify_code">验证码</string>
    <string name="jrmf_rp_input_verify_code2">请输入验证码</string>
    <string name="jrmf_rp_confirm_commit">确认提交</string>
    <string name="jrmf_rp_bank_list">银行卡列表</string>


    <!-- 支付方式 -->
    <string name="jrmf_rp_money">￥%1$s</string>
    <string name="jrmf_rp_please_pay">请支付</string>
    <string name="jrmf_rp_please_input_pwd">请输入支付密码</string>
    <string name="jrmf_rp_select_pay_type">选择付款方式</string>
    <string name="jrmf_rp_forget_pwd">忘记支付密码？</string>
    <string name="jrmf_rp_input_verify_code">请输%1$s手机号收到的验证码</string>
    <string name="jrmf_rp_send_code">发送验证码</string>
    <string name="jrmf_rp_input_verify_code_title">请输入短信验证码</string>
    <string name="jrmf_rp_add_card_pay">添加银行卡支付</string>
    <string name="jrmf_rp_add_card">添加银行卡</string>
    <string name="jrmf_rp_card_num">银行卡号</string>
    <string name="jrmf_rp_input_card_num">请输入银行卡号</string>
    <string name="jrmf_rp_look_support_card">查看支持的银行卡</string>
    <string name="jrmf_rp_alipay">支付宝支付</string>
    <string name="jrmf_rp_quit_pay">支付取消</string>
    <string name="jrmf_rp_wechat">微信支付</string>
    <string name="jrmf_rp_verify_code_suss">验证码发送成功</string>
    <string name="jrmf_rp_pay_waiting">支付结果确认中</string>
    <string name="jrmf_rp_pay_failure">支付失败</string>
    <string name="jrmf_rp_re_send_code">重新发送验证码</string>
    <string name="jrmf_rp_balance">零钱（余额 ¥ %1$s）</string>
    <string name="jrmf_rp_balance_less">零钱不足（余额 ¥ %1$s）</string>
    <string name="jrmf_rp_not_get_balance">获取余额失败</string>
    <string name="jrmf_rp_bind_card">您尚未绑定银行卡，发红包的累计限额为%1$s元，请绑定银行卡后再发红包。</string>

    <!--红包显示-->
    <string name="jrmf_rp_no_rp">手慢了, 红包派完了</string>
    <string name="jrmf_rp_look_rp_history">查看我的红包记录</string>
    <string name="jrmf_rp_single_amount">金额</string>
    <string name="jrmf_rp_amount">总金额</string>
    <string name="jrmf_rp_single_money">单个金额</string>
    <string name="jrmf_rp_my_rp">我的红包</string>
    <string name="jrmf_rp_group_num">本群共%1$d人</string>
    <string name="jrmf_rp_name">云红包</string>
    <string name="jrmf_rp_last_one">至少需要设置1个红包</string>
    <string name="jrmf_rp_most">一次最多可发%1$d个红包</string>
    <string name="jrmf_rp_count_error">请输入正确个数</string>
    <string name="jrmf_rp_money_error">请输入正确金额</string>
    <string name="jrmf_rp_last_money">单个红包金额不可低于0.01元</string>
    <string name="jrmf_rp_most_money">红包总金额不可超过%1$s元</string>
    <string name="jrmf_rp_single_most_money">单个红包金额不可超过%1$s元</string>
    <string name="jrmf_rp_luck_to_normal">当前为拼手气红包，改为普通红包</string>
    <string name="jrmf_rp_normal_to_luck">当前为普通红包，改为拼手气红包</string>
    <string name="jrmf_rp_no_rp_normal">该红包已被领取</string>
    <string name="jrmf_rp_had_rp">您已领取过该红包</string>
    <string name="jrmf_rp_rp_expire">该红包已超过24小时。如已领取,可在"我的红包"中查看</string>

    <!--红包详情-->
    <string name="jrmf_rp_self_rp_has_left">已领取%1$d/%2$d，共%3$s/%4$s元</string>
    <string name="jrmf_rp_who_rp">%1$s的红包</string>
    <string name="jrmf_rp_single_rp_done">%1$d个红包共%2$s元</string>
    <string name="jrmf_rp_single_rp">红包金额%1$s元,等待对方领取</string>
    <string name="jrmf_rp_pin_rp_done">%1$d个红包共%2$s元，%3$s被抢光</string>
    <string name="jrmf_rp_pin_rp_other_done">%1$d个红包，%2$s被抢光</string>
    <string name="jrmf_rp_pin_rp_other">领取%1$d/%2$d个</string>
    <string name="jrmf_rp_no_grab_tip">未领取的红包，将于24小时后发起退款</string>
    <string name="jrmf_rp_no_grab_tip2">未领取的红包过期后会退回零钱</string>
    <string name="jrmf_rp_receive_grab_tip1">收到的钱可用来发红包</string>
    <string name="jrmf_rp_receive_grab_tip2">收到的钱可直接提现</string>
    <string name="jrmf_rp_receive">收到的红包</string>
    <string name="jrmf_rp_send">发出的红包</string>
    <string name="jrmf_rp_send_one">发了一个红包</string>
    <string name="jrmf_rp_look_all_luck">看看大家的手气</string>
    <string name="jrmf_rp_all_in">共收到</string>
    <string name="jrmf_rp_luck_rp">拼手气红包</string>
    <string name="jrmf_rp_normal_rp">普通红包</string>
    <string name="jrmf_rp_most_luck">手气最佳</string>
    <string name="jrmf_rp_money_yuan">%1$s元</string>
    <string name="jrmf_rp_receive_rate">已领完%1$s/%2$s</string>
    <string name="jrmf_rp_receive_rate2">已领%1$s/%2$s</string>
    <string name="jrmf_rp_timeout">已过期</string>

    <!--重置密码-->
    <string name="jrmf_rp_set_pwd_suc">支付密码设置成功</string>
    <string name="jrmf_rp_update_pwd_suc">支付密码修改成功</string>
    <string name="jrmf_rp_reset_pwd_suc">支付密码重置成功</string>
    <string name="jrmf_rp_no_pwd_suc">设置成功</string>


    <!--交易记录-->
    <string name="jrmf_trade_in">收入</string>
    <string name="jrmf_trade_out">支出</string>
    <string name="jrmf_trade_back_money">退款方式</string>
    <string name="jrmf_trade_style">交易方式</string>
    <string name="jrmf_trade_detail">订单详情</string>
    <string name="jrmf_trade_success">交易成功</string>
    <string name="jrmf_trade_deposit_bank">提现银行</string>
    <string name="jrmf_trade_type">类型</string>
    <string name="jrmf_trade_charge">手续费</string>
    <string name="jrmf_trade_time">时间</string>
    <string name="jrmf_trade_ordernum">交易单号</string>
    <string name="jrmf_trade_remark">备注</string>
    <string name="jrmf_trade_history">交易记录</string>
    <string name="jrmf_trade_all">全部</string>
    <string name="jrmf_trade_no_data">暂无数据</string>

    <!--转账-->
    <string name="jrmf_rp_trans_to_friend">转账给朋友</string>
    <string name="jrmf_rp_trans">转账</string>
    <string name="jrmf_rp_trans_money">转账金额</string>
    <string name="jrmf_rp_trans_detail">转账详情</string>
    <string name="jrmf_rp_trans_update_toast">修改</string>
    <string name="jrmf_rp_trans_tip">转账说明</string>
    <string name="jrmf_rp_add_trans_tip">添加转账说明</string>
    <string name="jrmf_rp_add_trans_tip_limit">最多输入10个字</string>
    <string name="jrmf_rp_trans_little_tip">转账最低金额不能小于0.01元</string>
    <string name="jrmf_rp_trans_most_tip">转账金额超过限额%1$s元</string>
    <string name="jrmf_rp_trans_repeat_tip">你有%1d笔相同的转账对方未确认收款,你是否要继续转账</string>
    <string name="jrmf_rp_continue_trans">继续转账</string>
    <string name="jrmf_rp_trans_finish">完成</string>
    <string name="jrmf_rp_waitint_confirm">待确认收钱</string>
    <string name="jrmf_rp_trans_confirm">确认收钱</string>
    <string name="jrmf_rp_pay_succ">支付成功</string>
    <string name="jrmf_rp_now_back">立即退还</string>
    <string name="jrmf_rp_back_to_wallet">已退款到钱包</string>
    <string name="jrmf_rp_trans_time">转账时间%1$s</string>
    <string name="jrmf_rp_receive_money_time">收钱时间%1$s</string>
    <string name="jrmf_rp_back_time">退还时间%1$s</string>
    <string name="jrmf_rp_timeout_back2">已退还（过期）</string>
    <string name="jrmf_rp_timeout_back3">已退还</string>
    <string name="jrmf_rp_timeout_back">一天内朋友未确认，将退还给你</string>
    <string name="jrmf_rp_trans_to_who">待%1$s确认收钱</string>
    <string name="jrmf_rp_reback_tip">一天内未确认，将退还给对方。立即退还</string>
    <string name="jrmf_rp_reback_dialog">是否退还%1$s的转账</string>
    <string name="jrmf_rp_trans_to">向%1$s转账</string>
    <string name="jrmf_rp_trans_wait">待%1$s确认收钱</string>ƒ
    <string name="jrmf_rp_trans_succ">%1$s已收钱</string>
    <string name="jrmf_rp_had_money">已收钱</string>
    <string name="jrmf_rp_save_to_wallet">已存入，您可在钱包中查看</string>
    <string name="jrmf_rp_trans_raback">%1$s已退还</string>

    <string name="jrmf_rp_name_error">请输入姓名</string>
    <string name="jrmf_rp_id_card_error">身份证号格式不正确</string>
    <string name="jrmf_rp_identity_table">您尚未进行实名认证，账户可能存在安全风险，请实名认证后尝试。</string>
    <string name="jrmf_rp_identity_left">取消</string>
    <string name="jrmf_rp_identity_bt_next">下一步</string>
    <string name="jrmf_rp_identity_psd_text">请设置支付密码，用户支付验证</string>
    <string name="jrmf_rp_count_down">%1$d秒后重试</string>

    <!--其它-->
    <string name="jrmf_rp_no_support_emoji">不支持输入Emoji表情符号</string>
    <string name="jrmf_rp_load_fail">加载失败，点击重试</string>
    <string name="jrmf_rp_net_error_l">当前网络不佳,请稍后再试</string>
    <string name="jrmf_rp_identity_bt_ok">确定</string>
    <string name="jrmf_rp_quit">取消</string>
    <string name="jrmf_rp_confirm">确定</string>
    <string name="jrmf_rp_retry">重试</string>
    <string name="jrmf_rp_loading">加载中...</string>
    <string name="jrmf_rp_to_buttom">到底了噢～</string>

</resources>











