<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/jrmf_b_shape_round_white"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/color_323232"
        android:text="@string/jrmf_rp_trans_tip"
        />
    <com.jrmf360.neteaselib.base.view.ClearEditText
        android:id="@+id/cet_trans_des"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="14sp"
        android:textCursorDrawable="@drawable/jrmf_b_selector_cursor"
        android:background="@color/jrmf_rp_transparent"
        android:textColor="@color/color_323232"
        android:maxLines="1"
        android:maxLength="10"
        />

    <View
        android:id="@+id/line"
        android:layout_below="@id/et_trans_money"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/jrmf_rp_background"
        android:layout_marginTop="@dimen/jrmf_dimen_8"
        android:layout_height="0.5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="@dimen/jrmf_dimen_8"
        android:text="@string/jrmf_rp_add_trans_tip_limit"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color_aaaaaa"
            android:text="@string/jrmf_rp_quit"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/jrmf_b_title_bar_color"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:text="@string/jrmf_rp_confirm"/>

    </LinearLayout>


</LinearLayout>
